[package]
name = "apiclient-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
thiserror = "1.0.63"
tracing = "0.1"
tracing-subscriber = "0.3"
